force-app/main/default/objects/Position__c/fields/Associate_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Associate_Preferred_Name__c</fullName>
    <formula>Placed_Associate__r.Preferred_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associate Preferred Name</label>
    <type>Text</type>
</CustomField>