force-app/main/default/objects/Position__c/fields/Business_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager_Email__c</fullName>
    <label>Business Manager Email</label>
    <type>Email</type>
</CustomField>