force-app/main/default/objects/Position__c/fields/Placed_Associate_Email__c.field-meta.xml
<CustomField>
    <fullName>Placed_Associate_Email__c</fullName>
    <formula>Placed_Associate__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placed Associate Email</label>
    <type>Text</type>
</CustomField>