force-app/main/default/objects/Position__c/fields/School_Business_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>School_Business_Manager_Email__c</fullName>
    <label>School Business Manager Email</label>
    <type>Email</type>
</CustomField>