force-app/main/default/objects/Position__c/fields/School_Business_Manager_Email_text__c.field-meta.xml
<CustomField>
    <fullName>School_Business_Manager_Email_text__c</fullName>
    <formula>School__r.Current_Business_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Business Manager Email text</label>
    <type>Text</type>
</CustomField>